# Arc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
arc/: CMakeLists.txt
arc/src/: main.c
arc/src/core/: app.c  app.h  darray.c  darray.h  game.c  game.h  has_map.c  hash_map.h  input.h  sound_bank.h  string_utils.h  types.h  window.c  window.h
arc/src/renderer/: texture.h
arc/src/scene/: components.c  components.h  game_object.c  game_object.h  physics_2d.c  physics_2d.h  player.c  player.h  scene.c  scene.h  sprite_sheet.c  sprite_sheet.h
